2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* config.h.in (_LARGEFILE_SOURCE): Add missing define.
	(_FILE_OFFSET_BITS): Likewise.
	Reported by: Seth Goldberg.

2011-01-08  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Check for libdevmapper header.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (dmu_read): Use void * for some pointers to
	avoid aliasing.
	(fzap_lookup): Likewise.
	(dnode_get): Likewise.
	(make_mdn): Likewise.
	(zfs_mount): Likewise.
	(fzap_iterate): Use temporary pointer to avoid aliasing.
	(grub_zfs_read): Likewise.
	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Likewise.
	* grub-core/loader/xnu.c (grub_cmd_xnu_kernel): Use void * for some
	pointers to avoid aliasing.
	(grub_cmd_xnu_kernel64): Likewise.
	(grub_xnu_load_driver): Likewise.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/terminal.c (grub_cmd_terminal_input): Silence
	aliasing warning.
	(grub_cmd_terminal_output): Likewise.
	Reported and tested by: Grégoire Sutre.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (grub_keyboard_getkey): Silence spurious
	warning.
	Reported and tested by: Grégoire Sutre.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Do CPU substitution even if it's specified explicitly.
	Reported and tested by: Alain Greppin.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am (rs_decoder.S): Force compilation with -Os.
	Reported and tested by: Alain Greppin.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Satisfy some bison versions need for inttypes.h.

	* grub-core/lib/posix_wrap/inttypes.h: New file.
	* grub-core/lib/posix_wrap/sys/types.h (int8_t): New type.
	(int16_t): Likewise.
	(int32_t): Likewise.
	(int64_t): Likewise.
	Reported and tested by: Alain Greppin.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_netbsd_load_elf_meta):